fix align right order number

--- a/src/app/modules/projects/components/project-details/project-details.component.scss
+++ b/src/app/modules/projects/components/project-details/project-details.component.scss
@@ -49,6 +49,10 @@ $input-width: 254px;
       width: 70%;
     }
   }
+
+  #orderIdFueNumber, #orderIdAdminNumber {
+    text-align: right;
+  }
 }
 
 .align-right {
